<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/spacing_huge"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:textSize="@dimen/text_big"/>
    <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            tools:text="@string/desc_on_boarding"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/spacing_max"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appNameTextView"
            android:layout_alignLeft="@+id/subDescriptionText"
            android:layout_alignStart="@+id/subDescriptionText"/>
    <TextView
            android:id="@+id/subDescriptionText"
            android:layout_width="@dimen/dimen_250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_below="@+id/descriptionText"
            android:text="@string/sub_desc_on_boarding"
            android:textSize="@dimen/text_15"
            android:layout_marginTop="@dimen/spacing_micro"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_alignParentBottom="true"
                  android:layout_marginBottom="@dimen/spacing_large"
                  android:layout_marginStart="@dimen/spacing_large"
                  android:layout_marginLeft="@dimen/spacing_large"
                  android:layout_marginRight="@dimen/spacing_large"
                  android:layout_marginEnd="@dimen/spacing_large"
                  android:weightSum="2">

    </LinearLayout>

</RelativeLayout>