<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/containerImageView"
                android:layout_width="match_parent"
                tools:src="@drawable/persona_bg"
                android:scaleType="fitXY"
                android:layout_height="match_parent"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/filteringView"
                android:background="@drawable/gradient_bg"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_60"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/text_heading"
                  android:gravity="start"
                  android:id="@+id/headingTextView"
                  android:layout_marginStart="@dimen/spacing_normal"
                  android:layout_marginLeft="@dimen/spacing_normal"
                  android:layout_marginRight="@dimen/spacing_normal"
                  android:layout_marginEnd="@dimen/spacing_normal"
                  android:textColor="@color/white"
                  android:layout_marginTop="@dimen/spacing_max"
                  android:text="@string/persona_heading"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/text_15"
                  android:gravity="start"
                  android:id="@+id/subHeadingTextView"
                  android:layout_marginStart="@dimen/spacing_normal"
                  android:layout_marginLeft="@dimen/spacing_normal"
                  android:layout_marginRight="@dimen/spacing_normal"
                  android:layout_marginEnd="@dimen/spacing_normal"
                  android:layout_below="@+id/headingTextView"
                  android:text="@string/choice_desc"/>

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/subHeadingTextView"
                android:id="@+id/actionsRecyclerView"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_centerVertical="true"
                android:scrollbars="vertical"
                android:layout_above="@+id/nextBtn"
                tools:listitem="@layout/item_persona"/>

        <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_next_selector"
                android:text="@string/next"
                android:id="@+id/nextBtn"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>